--- a/.github/workflows/a-workflow.yml
+++ b/.github/workflows/a-workflow.yml
@@ -1,20 +1,26 @@
-name: Greet Everybody
+name: Test
 # This workflow is triggered on pushes to the repository.
 on: [push]
 
 jobs:
-  build:
-    # Job name is Greeting
-    name: Greeting
-    # This job runs on Linux
-    runs-on: ubuntu-latest
+  test:
+    name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node_version: [8, 10, 12]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+
     steps:
     - uses: actions/checkout@v1
-    # This step uses the hello-world-action stored in this workflow's repository.
-    - uses: ./hello-world-action
+    - name: Use Node.js ${{ matrix.node_version }}
+      uses: actions/setup-node@v1
       with:
-        who-to-greet: 'Octocat'
-      id: hello
-    # This step prints the time.
-    - run: echo "The time was ${{ steps.hello.outputs.time }}"
+        version: ${{ matrix.node_version }}
 
+    - name: npm install, build and test
+      run: |
+        # npm install
+        # npm run build --if-present
+        # npm test
+        echo Hello!!!
